fine base html e css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body>
-    
+    <div id="app">
+        <div id="logo">
+            <img src="https://www.boolean.careers/images/misc/logo.png" alt="boolean">
+        </div>
+
+        <div id="adder">
+            <input type="text" id="toadd" name="toadd" placeholder="aggiungi nota">
+            <button>aggiungi</button>
+        </div>
+
+        <div class="notes">
+            <ul>
+                <li class="clearfix">fare la spesa <i class="fas fa-times-circle"></i></li>
+            </ul>
+
+        </div>
+
+    </div>
 
 
     <script src="js/script.js"></script>
